[fix] CSS : Fix date/time alignment on tables, under firefox

--- a/src/global.scss
+++ b/src/global.scss
@@ -317,6 +317,16 @@ mat-table {
         visibility: hidden;
       }
 
+      input[type=number]::-webkit-outer-spin-button,
+      input[type=number]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+
+      input[type=number] {
+        text-align: right;
+        -moz-appearance: textfield;
+      }
     }
 
     .mat-row {
@@ -375,17 +385,18 @@ mat-table {
       .mat-form-field-infix {
         width: auto !important;
         white-space: nowrap; //padding-left: 8px;
-        overflow: hidden;
-      }
+        overflow: visible;
+        //overflow: visible;
 
-      .mat-form-field-infix input {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        input {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
       }
 
       .mat-form-field-subscript-wrapper {
-        margin-top: 0.05rem !important;
+        margin-top: -0.1rem !important;
       }
     }
 
